--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,6 +1,18 @@
 <% include header %>
-
-  <h1><%-title %></h1>
-  <p>Welcome to <%-title %></p>
-
+  <form class="form-signin" method="POST">
+      <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+      <h1 class="h3 mb-3 font-weight-normal">Connexion chatnode</h1>
+      <label for="inputEmail" class="sr-only">Adresse mail</label>
+      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name="user[email]" required autofocus>
+      <label for="inputPassword" class="sr-only">mot de passe</label>
+      <input type="password" id="inputPassword" name="user[password]" class="form-control" placeholder="Password" required>
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Se souvenir
+        </label>
+      </div>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Connexion</button>
+      <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+    </form>
+  </body>
 <% include footer %>
