--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,7 +1,9 @@
+<% stylesheet('https://getbootstrap.com/docs/4.0/examples/sign-in/signin.css') -%>
 <% include header %>
   <form class="form-signin" method="POST">
       <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Connexion chatnode</h1>
+      <a href="signin">Creer un compte</a>
       <label for="inputEmail" class="sr-only">Adresse mail</label>
       <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name="user[email]" required autofocus>
       <label for="inputPassword" class="sr-only">mot de passe</label>
